add [ 新增取得城堡列表API ]
